--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,8 @@
 body{
   text-align: center;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+h1{
   
 }
