include minor edits to Markdown, add notes-to-self for sections as comments, select background color in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,9 @@
 body{
   text-align: center;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  background-color: rgb(224, 238, 250);
 }
 
 h1{
-  
+
 }
