--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,10 @@ body{
   background-color: rgb(224, 238, 250);
 }
 
+img{
+  float: right;
+}
+
 .blue-theme{
   background-color: rgb(184, 226, 245);
 }
@@ -14,6 +18,10 @@ body{
 
 .italic{
   font-style: italic;
+}
+
+.cute{
+  color: rgb(236, 131, 148);
 }
 
 h1{
