--- a/css/styles.css
+++ b/css/styles.css
@@ -8,6 +8,13 @@ img{
   float: right;
 }
 
+.jumbotron-custom{
+  border: 4px solid rgb(112, 183, 183);
+  margin: 20px;
+  padding: 10px;
+  background-color:rgb(248, 248, 232)
+}
+
 .blue-theme{
   background-color: rgb(184, 226, 245);
 }
