--- a/css/styles.css
+++ b/css/styles.css
@@ -4,33 +4,36 @@ body{
   background-color: rgb(224, 238, 250);
 }
 
-img{
-  float: right;
-}
-
 .jumbotron-custom{
-  border: 4px solid rgb(112, 183, 183);
+  border: 4px solid rgb(155, 225, 225);
   margin: 20px;
   padding: 10px;
   background-color:rgb(248, 248, 232)
 }
 
-.blue-theme{
-  background-color: rgb(184, 226, 245);
-}
-
-.underline{
-  text-decoration: underline;
+.card-body{
+  border: 2px solid rgb(155,192,224);
+  float: left;
 }
 
 .italic{
   font-style: italic;
 }
 
+img{
+  float: right;
+  border: 6px inset rgb(255,77,165);
+}
+
+.blue-theme{
+  background-color: rgb(155, 192, 224);
+  border: rgb(224,238,250)
+}
+
 .cute{
   color: rgb(236, 131, 148);
 }
 
-h1{
-
+.underline{
+  text-decoration: underline;
 }
